--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGO_URI="mongodb+srv://bhskrbnsl_books:<db_password>@cluster0.amidzf9.mongodb.net/"
 JWT_SECRET="Bhaska@102938"
-PORT="4040"
+PORT="https://books-backend-wjfi.onrender.com"
